# nhmrs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  STRUCTURE.md  demo.py  demo_kinematics.py  demo_spread.py  example_inference_skeleton.py  example_training_skeleton.py  pyproject.toml  requirements.txt  setup.py
nhmrs/: __init__.py  simple_assignment_v0.py
nhmrs/_nhmrs_utils/: __init__.py  core.py  rendering.py  reward.py  scenario.py
nhmrs/_nhmrs_utils/kinematics/: __init__.py  ackermann.py  base.py  differential_drive.py  unicycle.py
nhmrs/simple_assignment/: __init__.py  simple_assignment.py  simple_assignment_reward.py
simple_assignment/: __init__.py  simple_assignment_v0.py
simple_assignment/env/: __init__.py  rendering.py  scenario.py  simple_assignment.py
tests/: __init__.py  test_collision.py  test_kinematics.py  test_simple_assignment.py  test_spread_reward.py
